<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaskFrag</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_fragment1">Fragment1</string>
    <string name="title_activity_fragment2">Fragment2</string>
    <string name="menu_insert">Add</string>
    <string name="title_activity_t_editor">T_editor</string>
    <string name="task_title_hint_et">What\'s your task?</string>
    <string name="task_comment_hint_et">Comments here</string>
    <string name="task_time_alert_tv">Remind me on a day:</string>
    <string name="task_location_alert_tv">Remind me at a place:</string>
    <string name="task_priority_tv">Priority:</string>
    <string name="title_activity_cal">Cal</string>
    <string name="task_delete">Delete</string>

</resources>