<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".T_editor" >

    <EditText 
        android:id="@+id/task_title_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_title_hint_et"

        />
    
    <LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
        >
        
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/task_time_alert_tv"
	        />
	    
	    <Spinner 
	        android:id="@+id/task_time_alert_spinner"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        />
	    
	    <ToggleButton 
	        android:id="@+id/task_time_alert_tb"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:checked="false"
	        android:layout_weight="1"
	       	/>   
    </LinearLayout>

    <LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
        >
        
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/task_location_alert_tv"
	        />
	    
	    <Spinner 
	        android:id="@+id/task_location_alert_spinner"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        />
	    
	    <ToggleButton 
	        android:id="@+id/task_location_alert_tb"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:checked="false"
	        android:layout_weight="1"
	       	/>   
    </LinearLayout>
    
    <LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
        >
	    
        <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/task_priority_tv"
	        />
        
	    <RadioGroup 
	        android:id="@+id/task_priority_rg"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_gravity="right"
	        >
	        
	        <RadioButton 
	            android:id="@+id/task_priority_none_rb"
	            android:checked="true"
	            android:text="None"
	            android:layout_weight="1"
	        />
	        
	        <RadioButton 
	            android:id="@+id/task_priority_low_rb"
	            android:checked="true"
	            android:text="Low"
	            android:layout_weight="1"
	        />
	        
	        <RadioButton 
	            android:id="@+id/task_priority_med_rb"
	            android:checked="true"
	            android:text="Medium"
	            android:layout_weight="1"
	        />
	        
	        <RadioButton 
	            android:id="@+id/task_priority_high_rb"
	            android:checked="true"
	            android:text="High"
	            android:layout_weight="1"
	        />
	    </RadioGroup>
    
	</LinearLayout>
	
    <EditText
        android:id="@+id/task_comment_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_comment_hint_et"
        />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        
        <Button
            android:id="@+id/task_save_bt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        
        <Button 
            android:id="@+id/task_cancel_bt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>
    
</LinearLayout>